--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>vai ser uma imagem aqui </h1>
-    <ul>
-        <li>produtos</li>
-        <li>contato</li>
-    </ul></header>
-    
+    <header>
+        <h1>It will be an image here</h1>
+        <ul>
+            <li>School</li>
+            <li>Student</li>
+        </ul>
+    </header>
+
 </body>
 </html>
