--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>It will be an image here</h1>
-        <ul>
-            <li>School</li>
-            <li>Student</li>
+    <header class="cabecalho">
+                 <img class="cabecalho-imagem" src="nome.png" alt="nome.png">
+        <ul class="cabecalho-lista">
+            <li>class="cabecalho-lista-item">escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
 
