--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
             <li class="header-list-item">Student</li>
         </ul>
     </header>
-    <section class="escola">
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+    <section class="produtos">
+        <div class="produtos-div-conteudo">
+            <h2 class="produtos-titulo">Sobre a loja Alive Puppets</h2>
+            <p class="produtos-texto-um">A Alive Puppets foi fundada em 2023 e tem como objetivo vender pelúcias originais ,de qualidade através do nosso site.</p>
+            <p class="produtos-texto-dois"> Oferecemos linhas personalizadas,de Marca como Disney.</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="produtos-imagem" src="Formula-bro.png" alt="imagem que representa uma pelucia original.">
     </section>
-    <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <div class="estudante-todos">
+    <section class="pelucia">
+        <h2 class="pelucia-titulo">Produtos em Destaque!</h2>
+        <div class="pelucia-todos">
         <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        <div class="pelucia-div">
+            <img class="pelucia-imagem" src="Marcelo.jpeg" alt="foto do mike monster">
+            <h3 class="pelucia-nome">mike monster</h3>
+            <a href="https://github.com/mikemonster"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
+            <a href="https://linkedin.com/mikemonster"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.png" alt="icone instagram"></a>
             </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        <div class="pelucia-div">
+            <img class="pelucia-imagem" src="marrie.jpeg" alt="foto da marrie">
+            <h3 class="pelucia-nome">marrie</h3>
+            <a href="https://github.com/marrie"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
+            <a href="https://linkedin.com/marrie"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://instagram.com/marrie"><img class="pelucia-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
        
     </div>
