--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span></span>
         <div class="pelucia-div">
             <img class="pelucia-imagem" src="Marcelo.jpeg" alt="foto do mike monster">
-            <h3 class="pelucia-nome">mike monster</h3>
+            <h3 class="pelucia-nome">mikemonster</h3>
             <a href="https://github.com/mikemonster"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/mikemonster"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.png" alt="icone instagram"></a>
