--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
         <img class="header-image" src="alurastart logo.png" alt="logo da alura start">
         <ul class="list-header">
-            <li class="header-list-item">School</li>
-            <li class="header-list-item">Student</li>
+            <li class="header-list-item">produtos</li>
+            <li class="header-list-item">contato</li>
         </ul>
     </header>
     <section class="produtos">
