--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alura Start Team</title>
+    <title>Alive Puppets</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +38,7 @@
             <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.png" alt="icone instagram"></a>
             </div>
         <div class="pelucia-div">
-            <img class="pelucia-imagem" src="marrie.jpeg" alt="foto da marrie">
+            <img class="pelucia-imagem" src="marrie.Jpg" alt="foto da marrie">
             <h3 class="pelucia-nome">marrie</h3>
             <a href="https://github.com/marrie"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/marrie"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
