--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="pelucia-todos">
         <span></span>
         <div class="pelucia-div">
-            <img class="pelucia-imagem" src="Marcelo.jpeg" alt="foto do mike monster">
+            <img class="pelucia-imagem" src="mikemonster.JPG" alt="foto do mike monster">
             <h3 class="pelucia-nome">mikemonster</h3>
             <a href="https://github.com/mikemonster"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/mikemonster"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
