--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-image" src="alurastart logo.png" alt="logo da alura start">
+        <img class="header-image" src="mikemonster.JPG" alt="logo da alura start">
         <ul class="list-header">
             <li class="header-list-item">produtos</li>
             <li class="header-list-item">contato</li>
