--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-image" src="mikemonster.JPG" alt="logo da alura start">
+        <img class="header-image" src="mikemonster.JPG" alt="logo da loja">
         <ul class="list-header">
             <li class="header-list-item">produtos</li>
             <li class="header-list-item">contato</li>
@@ -24,7 +24,7 @@
             <p class="produtos-texto-um">A Alive Puppets foi fundada em 2023 e tem como objetivo vender pelúcias originais ,de qualidade através do nosso site.</p>
             <p class="produtos-texto-dois"> Oferecemos linhas personalizadas,de Marca como Disney.</p>
         </div>
-        <img class="produtos-imagem" src="Formula-bro.png" alt="imagem que representa uma pelucia original.">
+        <img class="produtos-imagem" src="marrie.JPG" alt="imagem que representa uma pelucia original.">
     </section>
     <section class="pelucia">
         <h2 class="pelucia-titulo">Produtos em Destaque!</h2>
