--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-image" src="mikemonster.JPG" alt="logo da loja">
+        <img class="header-image" src="Mikemonster.JPG" alt="logo da loja">
         <ul class="list-header">
             <li class="header-list-item">produtos</li>
             <li class="header-list-item">contato</li>
@@ -24,21 +24,21 @@
             <p class="produtos-texto-um">A Alive Puppets foi fundada em 2023 e tem como objetivo vender pelúcias originais ,de qualidade através do nosso site.</p>
             <p class="produtos-texto-dois"> Oferecemos linhas personalizadas,de Marca como Disney.</p>
         </div>
-        <img class="produtos-imagem" src="marrie.JPG" alt="imagem que representa uma pelucia original.">
+        <img class="produtos-imagem" src="Marrie.JPG" alt="imagem que representa uma pelucia original.">
     </section>
     <section class="pelucia">
         <h2 class="pelucia-titulo">Produtos em Destaque!</h2>
         <div class="pelucia-todos">
         <span></span>
         <div class="pelucia-div">
-            <img class="pelucia-imagem" src="mikemonster.JPG" alt="foto do mike monster">
+            <img class="pelucia-imagem" src="Mikemonster.JPG" alt="foto do mike monster">
             <h3 class="pelucia-nome">mikemonster</h3>
             <a href="https://github.com/mikemonster"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/mikemonster"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.png" alt="icone instagram"></a>
             </div>
         <div class="pelucia-div">
-            <img class="pelucia-imagem" src="marrie.Jpg" alt="foto da marrie">
+            <img class="pelucia-imagem" src="Marrie.Jpg" alt="foto da marrie">
             <h3 class="pelucia-nome">marrie</h3>
             <a href="https://github.com/marrie"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/marrie"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
