--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-image" src="Mikemonster.JPG" alt="logo da loja">
+        <img class="header-image" src="Logo.jpg" alt="logo da loja">
         <ul class="list-header">
             <li class="header-list-item">produtos</li>
             <li class="header-list-item">contato</li>
@@ -38,7 +38,7 @@
             <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.png" alt="icone instagram"></a>
             </div>
         <div class="pelucia-div">
-            <img class="pelucia-imagem" src="Marrie .JPG" alt="foto da marrie">
+            <img class="pelucia-imagem" src="Marrie.JPG" alt="foto da marrie">
             <h3 class="pelucia-nome">marrie</h3>
             <a href="https://github.com/marrie"><img class="pelucia-icone" src="Marrie .JPG" alt="icone github"></a>
             <a href="https://linkedin.com/marrie"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
