--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <h3 class="pelucia-nome">mikemonster</h3>
             <a href="https://github.com/mikemonster"><img class="pelucia-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/mikemonster"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://instagram.com/mikemonster"><img class="pelucia-icone" src="instagram.JPG" alt="icone instagram"></a>
             </div>
         <div class="pelucia-div">
             <img class="pelucia-imagem" src="Marrie.JPG" alt="foto da marrie">
             <h3 class="pelucia-nome">marrie</h3>
             <a href="https://github.com/marrie"><img class="pelucia-icone" src="Marrie.JPG" alt="icone github"></a>
             <a href="https://linkedin.com/marrie"><img class="pelucia-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marrie"><img class="pelucia-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://instagram.com/marrie"><img class="pelucia-icone" src="instagram.JPG" alt="icone instagram"></a>
         </div>
        
     </div>
